[PDI-4010] removed use of java.ext.dirs; instead used launcher
git-svn-id: svn://source.pentaho.org/svnkettleroot/Kettle/trunk@14710 5fb7f6ec-07c1-534a-b4ca-9155e429e800